<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.dicodingeventjava.ui.fragment.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_detailEventActivity"
            app:destination="@id/detailEventActivity" />
    </fragment>
    <fragment
        android:id="@+id/navigation_upcoming"
        android:name="com.example.dicodingeventjava.ui.fragment.upcoming.UpcomingFragment"
        android:label="@string/title_upcoming"
        tools:layout="@layout/fragment_upcoming" >
        <action
            android:id="@+id/action_navigation_upcoming_to_detailEventActivity"
            app:destination="@id/detailEventActivity" />
    </fragment>
    <fragment
        android:id="@+id/navigation_finished"
        android:name="com.example.dicodingeventjava.ui.fragment.finished.FinishedFragment"
        android:label="@string/title_finished"
        tools:layout="@layout/fragment_finished" >
        <action
            android:id="@+id/action_navigation_finished_to_detailEventActivity"
            app:destination="@id/detailEventActivity" />
    </fragment>
    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.dicodingeventjava.ui.fragment.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" >
    </fragment>
    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.dicodingeventjava.ui.fragment.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" >

    </fragment>
    <activity
        android:id="@+id/detailEventActivity"
        android:name="com.example.dicodingeventjava.ui.activity.DetailEventActivity"
        android:label="activity_detail_event"
        tools:layout="@layout/activity_detail_event" />

</navigation>